--- a/src/css/layout.css
+++ b/src/css/layout.css
@@ -9,6 +9,7 @@ main {
   width: 100%;
   margin: 0 auto;
   padding-inline: var(--layout-padding);
+  box-sizing: border-box;
 }
 
 .container {
